<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".InfoPage"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textmpinfo"
        android:layout_width="401dp"
        android:layout_height="0dp"
        android:layout_marginBottom="336dp"
        android:gravity="center"
        android:text="@string/meal_prep_info"
        android:textColor="@android:color/holo_green_light"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/InfoPageRecipeBut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/InfoPageInfobut"
        android:layout_width="105dp"
        android:layout_height="75dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/darker_gray"
        android:text="@string/info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/infoPageCalendarBut"
        android:layout_width="0dp"
        android:layout_height="78dp"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="8dp"
        android:text="@string/calendar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/InfoPageRecipeBut"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/InfoPageRecipeBut"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/colorButtonNormal"
        android:drawableBottom="@android:color/black"
        android:text="@string/recipe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/infoPageCalendarBut"
        app:layout_constraintTop_toBottomOf="@+id/textmpinfo" />

</android.support.constraint.ConstraintLayout>